HTML updated, JS function built for calling 'recipe' API.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     
-
+<form id="form">
+    <input type="text" id="userInput">
+    <button id="btn">Search</button>
+</form>
 
 
 
