--- a/index.html
+++ b/index.html
@@ -6,13 +6,40 @@
     <title>Temp: Recipe App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+    <style>
+        h1, h4 {
+            font-family: 'Hamlet' , sans-serif;
+            font-weight: bold;
+        }
+
+        p {
+            font-family: 'Fraunces', serif;
+        }
+
+        button { 
+            font-family: 'fraunces', serif;
+            font-weight: bold;
+
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>About</h1>
+    </header>
+    <main>
+        <section>
+            <h4>Always have a recipe that aides your health goals.</h4>
+            <p>
+                A balanced diet is essential for maintaining good health and achieving your wellness objectives. Choosing recipes that support your health goals is an important step towards a healthier lifestyle. Whether you're aiming to lose weight, gain muscle, or simply improve your overall well-being, the right recipes can make a significant difference. Make conscious choices to include ingredients that align with your health objectives, and you'll be on your way to a happier and healthier you.
+            </p>
+        </section>
 
-
-
-
+        <section>
+            <h1>Find Your Recipe</h1>
+            <button id="searchRecipe">Search Recipe</button>
+        </section>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
