--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,23 @@
         </div>
       </section>
            
-      <footer>Health & Nutrition</footer>
+<!-- Footer -->
+<footer class=" text-center text-white" style="background-color:#301c1c;">
+  <div class="container p-4">
+
+
+
+
+  </div>
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2023 Copyright:
+    <a class="text-white">Health and Nutrition</a>
+  </div>
+
+</footer>
+<!-- Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
