Enhanced for loop added to pull and add Nutrition Data.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <form id="form">
         <input type="text" id="userInput">
         <button id="btn">Search</button>
+        <div id="recipes"></div>
     </form>
 
     <!-- Start of Footer -->
