changed text font and background color to better match index html

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
           </div>
 
         </form>
-
+<!-- ddd -->
         <div class="text-center text-md-left">
           <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Submit</a>
         </div>
