--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./assets/contact.css" />
+     <!-- Using Google fonts for styling website fonts -->
+     <link href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow:regular" rel="stylesheet" />
+     <link href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+     <link href="https://fonts.googleapis.com/css?family=Hahmlet:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
 </head>
 
 <body>
   <!-- Section Navbar -->
-  <nav class="navbar navbar-expand-lg  p-3">
+  <nav class="navbar navbar-expand-lg p-3">
     <div class="container-fluid">
       <a class="navbar-brand nav-icon"><img class="nav-icon" src="assets/IMG/nutritionix.png"</img>  </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -26,13 +30,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">FAQ</a>
+            <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Recipes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">FAQ</a>
           </li>
         </ul>
       </div>
@@ -179,16 +183,16 @@
   </section>
 
   <!-- Footer -->
-  <footer class=" text-center text-white" style="background-color:#301c1c;">
-    <div class="container p-4">
+  <footer class=" text-center text-white" style="background-color:#70492C">
+    <!-- <div class="container p-4">
 
 
 
 
-    </div>
+    </div> -->
 
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    <div class="text-center p-3" style="background-color: #70492C">
       © 2023 Copyright:
       <a class="text-white">Health and Nutrition</a>
     </div>
