--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#FAQ">FAQ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Recipes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">FAQ</a>
           </li>
         </ul>
       </div>
@@ -45,10 +45,11 @@
   <section class="mb-4">
 
     <!--Heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4 fw-bold">Contact Us</h2>
+    <h2 class="h1-responsive font-weight-bold text-center my-4 fw-bold" id="contact">Contact Us</h2>
 
     <div class="row">
 
+      <!-- Contact form starts  -->
       <div class="col-md-9 mb-md-0 mb-5">
         <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
@@ -96,7 +97,7 @@
   </section>
   <!--Section: FAQ-->
   <section>
-    <h3 class="text-center mb-4 pb-2  fw-bold faq">FAQ</h3>
+    <h3 class="text-center mb-4 pb-2  fw-bold faq" id="FAQ">FAQ</h3>
     <p class="text-center mb-5">
       Find the answers for some of the most frequently asked questions about nutrition below
     </p>
