--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>About</h1>
-        <img src="./assets/img/Eatwell-guide.jpg">
+        <img src="./assets/img/Eatwell-guide.jpg" id="img1">
        
 
         <hr>
@@ -26,7 +26,7 @@
 
         <section>
             <h1>Find Your Recipe</h1>
-            <img src="./assets/img/healthy-heart.jpg" alt="Eat healthy Live healthy">
+            <img src="./assets/img/healthy-heart.jpg" id="img2" alt="Eat healthy Live healthy">
 
             <hr>
             <form id="form">
