--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Meal Discovery Contact Page">
   <title>Contact page</title>
+
+  <!-- Importing Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="./assets/contact.css" />
-     <!-- Using Google fonts for styling website fonts -->
-     <link href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow:regular" rel="stylesheet" />
-     <link href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
-     <link href="https://fonts.googleapis.com/css?family=Hahmlet:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
-</head>
+  <link rel="stylesheet" type="text/css" href="../CSS/contact.css" />
 
+  <!-- Using Google fonts for styling website fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow:regular" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Hahmlet:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
+</head>
 <body>
+
   <!-- Section Navbar -->
   <nav class="navbar navbar-expand-lg p-3">
     <div class="container-fluid">
-      <a class="navbar-brand nav-icon"><img class="nav-icon" src="assets/IMG/nutritionix.png"</img>  </a>
+      <a class="navbar-brand nav-icon">
+        <img class="nav-icon" src="../IMG/nutritionix.png">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -36,7 +41,7 @@
             <a class="nav-link" href="#FAQ">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recipes</a>
+            <a class="nav-link" href="../HTML/Search_Recipe.html">Recipes</a>
           </li>
         </ul>
       </div>
@@ -85,26 +90,26 @@
 
             </div>
           </div>
-
         </form>
-<!-- ddd -->
+        <!-- ddd -->
         <div class="text-center text-md-left">
           <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Submit</a>
         </div>
         <div class="status"></div>
       </div>
 
-  </section>
-  <!--Section: FAQ-->
-  <section>
+    <!--Section: FAQ-->
     <h3 class="text-center mb-4 pb-2  fw-bold faq" id="FAQ">FAQ</h3>
     <p class="text-center mb-5">
       Find the answers for some of the most frequently asked questions about nutrition below
     </p>
+    
     <!-- Question 1 -->
     <div class="row">
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="far fa-paper-plane text-primary pe-2"></i> What is a healthy diet?</h6>
+        <h6 class="mb-3 text-primary">
+          <i class="far fa-paper-plane text-primary pe-2"></i> What is a healthy diet?
+        </h6>
         <p>
           The fundamental principle to a healthy diet comes down to one word: <strong><u>balance</u></strong>. Eating
           enough food
@@ -115,10 +120,12 @@
           of your diet is important.
         </p>
       </div>
+
       <!-- Question 2 -->
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-pen-alt text-primary pe-2"></i>How
-          can you benefit from a healthy diet?</h6>
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-pen-alt text-primary pe-2"></i>How can you benefit from a healthy diet?
+        </h6>
         <p>
           Eating a healthy diet will most obviously assist you in losing weight but it also has other great benefits.
           Changing your diet
@@ -127,10 +134,11 @@
           types of cancers, and even depression.
         </p>
       </div>
+
       <!-- Question 3 -->
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-user text-primary pe-2"></i>What is the relationship between
-          eating healthy and calories?
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-user text-primary pe-2"></i>What is the relationship between eating healthy and calories?
         </h6>
         <p>
           Calories are your body's source of fuel. We need to refuel our energy supply by eating food. A person should
@@ -141,9 +149,11 @@
           to our diet.
         </p>
       </div>
+
       <!-- Question 4 -->
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-rocket text-primary pe-2"></i> How important are fruits and
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-rocket text-primary pe-2"></i> How important are fruits and
           vegetables?
         </h6>
         <p>
@@ -155,12 +165,14 @@
           the onset of cancers, diabetes and other diseases.
         </p>
       </div>
+
       <!-- Question 5 -->
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-home text-primary pe-2"></i> Are foods that contain sugar
-          unhealthy?
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-home text-primary pe-2"></i> Are foods that contain sugar unhealthy?
         </h6>
-        <p>Sugars can be an enemy to a healthy diet. Yet it is important to address the difference between natural and
+        <p>
+          Sugars can be an enemy to a healthy diet. Yet it is important to address the difference between natural and
           added sugars
           for a healthy diet. Sugars are carbs which provide a vital source of energy and nutrition, yet many popular
           foods have sugar added to them, this is when sugars become unhealthy. Fruits and some vegetables contain
@@ -169,10 +181,12 @@
           health diet. It is therefore important to check the labels to ensure no products contain hidden added sugars.
         </p>
       </div>
+
       <!-- Question 6 -->
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-book-open text-primary pe-2"></i> How can you achieve a healthy
-          diet?</h6>
+        <h6 class="mb-3 text-primary">
+          <i class="fas fa-book-open text-primary pe-2"></i> How can you achieve a healthy diet?
+        </h6>
         <p>
           The general rules for healthy eating is that natural foods are generally healthy, and if a product has been
           overly processed it may contain unhealthy ingredient such as added sugars or bad fats. Cutting down on sugars,
@@ -183,22 +197,11 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class=" text-center text-white" style="background-color:#70492C">
-    <!-- <div class="container p-4">
-
-
-
-
-    </div> -->
-
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: #70492C">
-      © 2023 Copyright:
-      <a class="text-white">Health and Nutrition</a>
-    </div>
-
+  <!-- Start of Footer -->
+  <footer class="text-center position-relative bottom-0 text-light">
+    <p>@ Copyright <a href="../index.html" class="text-white">Meal Discovery</a></p>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
