--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -56,7 +56,7 @@
 
       <!-- Contact form starts  -->
       <div class="col-md-9 mb-md-0 mb-5">
-        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+        <form id="contact-form" name="contact-form" action="../index.html">
 
           <div class="row">
 
@@ -207,7 +207,6 @@
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="assets/script.js"></script>
 </body>
 
 </html>
