--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 
       <!-- Contact form starts  -->
       <div class="col-md-9 mb-md-0 mb-5">
-        <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+        <form id="contact-form" name="contact-form">
 
           <div class="row">
 
@@ -85,12 +85,12 @@
 
             </div>
           </div>
-
+          <!-- Submit button -->
+          <div class="text-center text-md-left">
+            <button type= "submit" class="btn btn-primary">Submit</button>
+          </div>
         </form>
-<!-- ddd -->
-        <div class="text-center text-md-left">
-          <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Submit</a>
-        </div>
+
         <div class="status"></div>
       </div>
 
