--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Start of Navigation -->
     <nav class="d-flex p-1 justify-content-around border-bottom border-4 border-dark align-items-center">
-        <img class="nav-icon" src="./IMG/nutritionix.png" alt="Navigation Icon">
+        <img class="nav-icon" src="./Images/nutritionix.png" alt="Navigation Icon">
         <a class="text-decoration-none" href="#">Home</a>
         <a class="text-decoration-none" href="#About-Section">About</a>
         <a class="text-decoration-none" href="#benefits-section">Benefits</a>
@@ -49,7 +49,7 @@
             </span>
             <div class="About-Msg-container d-flex align-items-center justify-content-around">
                 <div class="w-75 m-lg-4">
-                    <img src="./IMG/Eatwell-guide.jpg" alt="Image of eating well guide">
+                    <img src="./Images/Eatwell-guide.jpg" alt="Image of eating well guide">
                 </div>
                 <div class="About-section-container d-flex justify-content-around">
                     <div class="about-message m-lg-4">
@@ -83,16 +83,18 @@
                             The benefits of making your own healthy meals
                         </h3>
                         <p class="w-75">
-                            There are many benefits of making your own meals. It can save you money and time. You'll be able to avoid
-                            meals that are high in fat, salts, and sugars. Making your own meals will also help you avoid food allergies and 
+                            There are many benefits of making your own meals. It can save you money and time. You'll be
+                            able to avoid
+                            meals that are high in fat, salts, and sugars. Making your own meals will also help you
+                            avoid food allergies and
                             allow you portion control better.
                         </p>
                     </div>
                     <div class="benefits-section-img-container">
-                        <img src="./IMG/pexels-dina-nasyrova-3976458.jpg" alt="Carrots and Salmon">
-                        <img src="./IMG/pexels-farhad-ibrahimzade-8738012.jpg" alt="Fruits and Croissants">
-                        <img src="./IMG/pexels-jane-doan-793765.jpg" alt="Person eating salad">
-                        <img src="./IMG/pexels-justin-doherty-4929721.jpg" alt="Recipe book">
+                        <img src="./Images/pexels-dina-nasyrova-3976458.jpg" alt="Carrots and Salmon">
+                        <img src="./Images/pexels-farhad-ibrahimzade-8738012.jpg" alt="Fruits and Croissants">
+                        <img src="./Images/pexels-jane-doan-793765.jpg" alt="Person eating salad">
+                        <img src="./Images/pexels-justin-doherty-4929721.jpg" alt="Recipe book">
                     </div>
                 </div>
             </section>
@@ -110,27 +112,27 @@
                 <div class="benefits-section2-img-container d-grid">
                     <div>
                         <h3>Boosts Immunity</h3>
-                        <img loading="lazy" src="./IMG/Healthy-immune-system.png" alt="Woman drinking a class of juice">
+                        <img loading="lazy" src="./Images/Healthy-immune-system.png" alt="Woman drinking a class of juice">
                     </div>
                     <div>
                         <h3>Lower Cost</h3>
-                        <img loading="lazy" src="./IMG/shopping.png" alt="Image of Women shopping for groceries">
+                        <img loading="lazy" src="./Images/shopping.png" alt="Image of Women shopping for groceries">
                     </div>
                     <div>
                         <h3>Muscle Support</h3>
-                        <img loading="lazy" src="./IMG/pexels-alexa-popovich-10360933.jpg" alt="Man working">
+                        <img loading="lazy" src="./Images/pexels-alexa-popovich-10360933.jpg" alt="Man working">
                     </div>
                     <div>
                         <h3>Strengthens Bones</h3>
-                        <img loading="lazy" src="./IMG/Bone-health.png" alt="Bone Strength in womans legs">
+                        <img loading="lazy" src="./Images/Bone-health.png" alt="Bone Strength in womans legs">
                     </div>
                     <div>
                         <h3>Healthier Pregnancies</h3>
-                        <img loading="lazy" src="./IMG/pexels-viktoria-matrosova-11685546.jpg" alt="Pregnant woman">
+                        <img loading="lazy" src="./Images/pexels-viktoria-matrosova-11685546.jpg" alt="Pregnant woman">
                     </div>
                     <div>
                         <h3>Digestive Support</h3>
-                        <img loading="lazy" src="./IMG/digestive-support.png" alt="Digestive health support">
+                        <img loading="lazy" src="./Images/digestive-support.png" alt="Digestive health support">
                     </div>
                 </div>
             </section>
@@ -140,7 +142,7 @@
         <section class="text-center" id="Find-Your-Recipe-Section">
             <h2>Find Your Recipe</h2>
             <hr class="mt-3">
-            <img src="./IMG/healthy-heart.jpg" alt="Eat healthy Live healthy">
+            <img src="./Images/healthy-heart.jpg" alt="Eat healthy Live healthy">
             <div>
                 <a href="./HTML/Search_Recipe.html">Find Your Recipe</a>
             </div>
