--- a/HTML/Recipe.html
+++ b/HTML/Recipe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,18 +11,22 @@
 
     <!-- Using Google fonts for styling website fonts -->
     <link href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow:regular" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Inria+Serif:300,300italic,regular,italic,700,700italic" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Inria+Serif:300,300italic,regular,italic,700,700italic"
+        rel="stylesheet" />
     <link rel="stylesheet" href="../CSS/Recipe.css">
 
     <!-- Dynamic Title using JS -->
     <title></title>
 </head>
+
 <body>
 
     <!-- Start of Navigation -->
     <nav class="d-flex p-1 justify-content-around border-bottom border-4 border-dark align-items-center">
-        <img class="nav-icon" src="../IMG/nutritionix.png" alt="Navigation Icon">
+        <img class="nav-icon" src="../Images/nutritionix.png" alt="Navigation Icon">
         <a class="text-decoration-none" href="../index.html">Home</a>
         <a class="text-decoration-none" href="../HTML/Search_Recipe.html">Recipes</a>
         <a class="text-decoration-none" href="../HTML/contact.html">Contact</a>
@@ -41,13 +46,13 @@
             <h2>Recipe Ingredients</h2>
             <p></p>
         </section>
-        
+
         <!-- Start of Recipe Instructions -->
         <section id="Recipe-Instructions-Container">
             <h2>Recipe Instructions</h2>
             <p></p>
         </section>
-        
+
         <!-- Start of Recipe Nutrition Facts -->
         <section id="Recipe-Nutrition-Facts-Container">
             <h2>Recipe Nutrition Facts</h2>
@@ -60,7 +65,8 @@
         <p>@ Copyright <a href="../index.html" class="text-white">Meal Discovery</a></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="../JavaScript/Recipe.js"></script>
 </body>
+
 </html>
