--- a/HTML/Search_Recipe.html
+++ b/HTML/Search_Recipe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +11,20 @@
 
     <!-- Using Google fonts for styling website fonts -->
     <link href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow:regular" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Hahmlet:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Inria+Serif:300,300italic,regular,italic,700,700italic" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Hahmlet:100,200,300,regular,500,600,700,800,900"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Inria+Serif:300,300italic,regular,italic,700,700italic"
+        rel="stylesheet" />
     <title>Recipe Search</title>
 </head>
+
 <body>
     <!-- Start of Navigation -->
     <nav class="d-flex p-1 justify-content-around border-bottom border-4 border-dark align-items-center">
-        <img class="nav-icon" src="../IMG/nutritionix.png" alt="Navigation Icon">
+        <img class="nav-icon" src="../Images/nutritionix.png" alt="Navigation Icon">
         <a class="text-decoration-none" href="../index.html">Home</a>
         <a class="text-decoration-none" href="../HTML/Search_Recipe.html">Recipes</a>
         <a class="text-decoration-none" href="../HTML/contact.html">Contact</a>
@@ -39,9 +45,10 @@
     <footer class="text-center position-relative bottom-0 text-light">
         <p>@ Copyright <a href="../index.html" class="text-white">Meal Discovery</a></p>
     </footer>
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="../JavaScript/script.js"></script>
 </body>
+
 </html>
