--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,16 +15,20 @@
 
   <!-- Using Google fonts for styling website fonts -->
   <link href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow:regular" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Hahmlet:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Fraunces:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Hahmlet:100,200,300,regular,500,600,700,800,900"
+    rel="stylesheet" />
 </head>
+
 <body>
 
   <!-- Section Navbar -->
   <nav class="navbar navbar-expand-lg p-3">
     <div class="container-fluid">
       <a class="navbar-brand nav-icon">
-        <img class="nav-icon" src="../IMG/nutritionix.png">
+        <img class="nav-icon" src="../Images/nutritionix.png">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,103 +103,112 @@
         <div class="status"></div>
       </div>
 
-    <!--Section: FAQ-->
-    <h3 class="text-center mb-4 pb-2  fw-bold faq" id="FAQ">FAQ</h3>
-    <p class="text-center mb-5">
-      Find the answers for some of the most frequently asked questions about nutrition below
-    </p>
-    
-    <!-- Question 1 -->
-    <div class="row">
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary">
-          <i class="far fa-paper-plane text-primary pe-2"></i> What is a healthy diet?
-        </h6>
-        <p>
-          The fundamental principle to a healthy diet comes down to one word: <strong><u>balance</u></strong>. Eating
-          enough food
-          that provides the range of nutrients your body requires encourages the promotion of good health. It's
-          important to ensure this variety of
-          foods to guarantee a broad range of the nutrients, vitamins, and minerals that your body needs.That is why
-          moderation and control
-          of your diet is important.
-        </p>
-      </div>
+      <!--Section: FAQ-->
+      <h3 class="text-center mb-4 pb-2  fw-bold faq" id="FAQ">FAQ</h3>
+      <p class="text-center mb-5">
+        Find the answers for some of the most frequently asked questions about nutrition below
+      </p>
 
-      <!-- Question 2 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary">
-          <i class="fas fa-pen-alt text-primary pe-2"></i>How can you benefit from a healthy diet?
-        </h6>
-        <p>
-          Eating a healthy diet will most obviously assist you in losing weight but it also has other great benefits.
-          Changing your diet
-          can significantly improve your general health, helps fight diseases associated with cholesterol, as well as
-          aiding diabetes,
-          types of cancers, and even depression.
-        </p>
-      </div>
+      <!-- Question 1 -->
+      <div class="row">
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h6 class="mb-3 text-primary">
+            <i class="far fa-paper-plane text-primary pe-2"></i> What is a healthy diet?
+          </h6>
+          <p>
+            The fundamental principle to a healthy diet comes down to one word: <strong><u>balance</u></strong>. Eating
+            enough food
+            that provides the range of nutrients your body requires encourages the promotion of good health. It's
+            important to ensure this variety of
+            foods to guarantee a broad range of the nutrients, vitamins, and minerals that your body needs.That is why
+            moderation and control
+            of your diet is important.
+          </p>
+        </div>
 
-      <!-- Question 3 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary">
-          <i class="fas fa-user text-primary pe-2"></i>What is the relationship between eating healthy and calories?
-        </h6>
-        <p>
-          Calories are your body's source of fuel. We need to refuel our energy supply by eating food. A person should
-          aim around 2000 calories
-          per day, unless trying to lose weight. Generally high calorie foods indicate a higher amount of salt, sugars,
-          and fat. That's why
-          it's important to find foods that are naturally high in calories that are a useful and a nutritious inclusion
-          to our diet.
-        </p>
-      </div>
+        <!-- Question 2 -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h6 class="mb-3 text-primary">
+            <i class="fas fa-pen-alt text-primary pe-2"></i>How can you benefit from a healthy diet?
+          </h6>
+          <p>
+            Eating a healthy diet will most obviously assist you in losing weight but it also has other great benefits.
+            Changing your diet
+            can significantly improve your general health, helps fight diseases associated with cholesterol, as well as
+            aiding diabetes,
+            types of cancers, and even depression.
+          </p>
+        </div>
 
-      <!-- Question 4 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary">
-          <i class="fas fa-rocket text-primary pe-2"></i> How important are fruits and
-          vegetables?
-        </h6>
-        <p>
-          To achieve a healthy diet, vegetables and fruit must be a vital feature of our diet to ensure the access to a
-          mixture of vitamins and
-          minerals that are abundant within them. Not only do fruit and veg provide a rich source of vitamins, minerals
-          and antioxidants, they also serve as a source of energy, aid weight loss and can be an influential tool in the
-          prevention of disease. Vegetables and fruit can improve the functions of the heart, kidneys, bones and prevent
-          the onset of cancers, diabetes and other diseases.
-        </p>
-      </div>
+        <!-- Question 3 -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h6 class="mb-3 text-primary">
+            <i class="fas fa-user text-primary pe-2"></i>What is the relationship between eating healthy and calories?
+          </h6>
+          <p>
+            Calories are your body's source of fuel. We need to refuel our energy supply by eating food. A person should
+            aim around 2000 calories
+            per day, unless trying to lose weight. Generally high calorie foods indicate a higher amount of salt,
+            sugars,
+            and fat. That's why
+            it's important to find foods that are naturally high in calories that are a useful and a nutritious
+            inclusion
+            to our diet.
+          </p>
+        </div>
 
-      <!-- Question 5 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary">
-          <i class="fas fa-home text-primary pe-2"></i> Are foods that contain sugar unhealthy?
-        </h6>
-        <p>
-          Sugars can be an enemy to a healthy diet. Yet it is important to address the difference between natural and
-          added sugars
-          for a healthy diet. Sugars are carbs which provide a vital source of energy and nutrition, yet many popular
-          foods have sugar added to them, this is when sugars become unhealthy. Fruits and some vegetables contain
-          naturally occurring sugars which are considered healthy when not consumed in overly excessive amounts, but
-          added sugars provide nearly no nutritional value and contribute significantly to weight gain, damaging your
-          health diet. It is therefore important to check the labels to ensure no products contain hidden added sugars.
-        </p>
-      </div>
+        <!-- Question 4 -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h6 class="mb-3 text-primary">
+            <i class="fas fa-rocket text-primary pe-2"></i> How important are fruits and
+            vegetables?
+          </h6>
+          <p>
+            To achieve a healthy diet, vegetables and fruit must be a vital feature of our diet to ensure the access to
+            a
+            mixture of vitamins and
+            minerals that are abundant within them. Not only do fruit and veg provide a rich source of vitamins,
+            minerals
+            and antioxidants, they also serve as a source of energy, aid weight loss and can be an influential tool in
+            the
+            prevention of disease. Vegetables and fruit can improve the functions of the heart, kidneys, bones and
+            prevent
+            the onset of cancers, diabetes and other diseases.
+          </p>
+        </div>
 
-      <!-- Question 6 -->
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary">
-          <i class="fas fa-book-open text-primary pe-2"></i> How can you achieve a healthy diet?
-        </h6>
-        <p>
-          The general rules for healthy eating is that natural foods are generally healthy, and if a product has been
-          overly processed it may contain unhealthy ingredient such as added sugars or bad fats. Cutting down on sugars,
-          fats, and salt is a good place to start when changing a diet and instead replace them with natural products such
-          as fruits, vegetables, nuts, grains and so on.
-        </p>
+        <!-- Question 5 -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h6 class="mb-3 text-primary">
+            <i class="fas fa-home text-primary pe-2"></i> Are foods that contain sugar unhealthy?
+          </h6>
+          <p>
+            Sugars can be an enemy to a healthy diet. Yet it is important to address the difference between natural and
+            added sugars
+            for a healthy diet. Sugars are carbs which provide a vital source of energy and nutrition, yet many popular
+            foods have sugar added to them, this is when sugars become unhealthy. Fruits and some vegetables contain
+            naturally occurring sugars which are considered healthy when not consumed in overly excessive amounts, but
+            added sugars provide nearly no nutritional value and contribute significantly to weight gain, damaging your
+            health diet. It is therefore important to check the labels to ensure no products contain hidden added
+            sugars.
+          </p>
+        </div>
+
+        <!-- Question 6 -->
+        <div class="col-md-6 col-lg-4 mb-4">
+          <h6 class="mb-3 text-primary">
+            <i class="fas fa-book-open text-primary pe-2"></i> How can you achieve a healthy diet?
+          </h6>
+          <p>
+            The general rules for healthy eating is that natural foods are generally healthy, and if a product has been
+            overly processed it may contain unhealthy ingredient such as added sugars or bad fats. Cutting down on
+            sugars,
+            fats, and salt is a good place to start when changing a diet and instead replace them with natural products
+            such
+            as fruits, vegetables, nuts, grains and so on.
+          </p>
+        </div>
       </div>
-    </div>
   </section>
 
   <!-- Start of Footer -->
