converted all images to webp

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Start of Navigation -->
     <nav class="d-flex p-1 justify-content-around border-bottom border-4 border-dark align-items-center">
-        <img class="nav-icon" src="./Images/nutritionix.png" alt="Navigation Icon">
+        <img class="nav-icon" src="./Images/nutritionix.webp" alt="Navigation Icon">
         <a class="text-decoration-none" href="#">Home</a>
         <a class="text-decoration-none" href="#About-Section">About</a>
         <a class="text-decoration-none" href="#benefits-section">Benefits</a>
@@ -49,7 +49,7 @@
             </span>
             <div class="About-Msg-container d-flex align-items-center justify-content-around">
                 <div class="w-75 m-lg-4">
-                    <img src="./Images/Eatwell-guide.jpg" alt="Image of eating well guide">
+                    <img src="./Images/Eatwell-guide.webp" alt="Image of eating well guide">
                 </div>
                 <div class="About-section-container d-flex justify-content-around">
                     <div class="about-message m-lg-4">
@@ -91,10 +91,10 @@
                         </p>
                     </div>
                     <div class="benefits-section-img-container">
-                        <img src="./Images/pexels-dina-nasyrova-3976458.jpg" alt="Carrots and Salmon">
-                        <img src="./Images/pexels-farhad-ibrahimzade-8738012.jpg" alt="Fruits and Croissants">
-                        <img src="./Images/pexels-jane-doan-793765.jpg" alt="Person eating salad">
-                        <img src="./Images/pexels-justin-doherty-4929721.jpg" alt="Recipe book">
+                        <img src="./Images/pexels-dina-nasyrova-3976458.webp" alt="Carrots and Salmon">
+                        <img src="./Images/pexels-farhad-ibrahimzade-8738012.webp" alt="Fruits and Croissants">
+                        <img src="./Images/pexels-jane-doan-793765.webp" alt="Person eating salad">
+                        <img src="./Images/pexels-justin-doherty-4929721.webp" alt="Recipe book">
                     </div>
                 </div>
             </section>
@@ -112,27 +112,27 @@
                 <div class="benefits-section2-img-container d-grid">
                     <div>
                         <h3>Boosts Immunity</h3>
-                        <img loading="lazy" src="./Images/Healthy-immune-system.png" alt="Woman drinking a class of juice">
+                        <img loading="lazy" src="./Images/Healthy-immune-system.webp" alt="Woman drinking a class of juice">
                     </div>
                     <div>
                         <h3>Lower Cost</h3>
-                        <img loading="lazy" src="./Images/shopping.png" alt="Image of Women shopping for groceries">
+                        <img loading="lazy" src="./Images/shopping.webp" alt="Image of Women shopping for groceries">
                     </div>
                     <div>
                         <h3>Muscle Support</h3>
-                        <img loading="lazy" src="./Images/pexels-alexa-popovich-10360933.jpg" alt="Man working">
+                        <img loading="lazy" src="./Images/pexels-alexa-popovich-10360933.webp" alt="Man working">
                     </div>
                     <div>
                         <h3>Strengthens Bones</h3>
-                        <img loading="lazy" src="./Images/Bone-health.png" alt="Bone Strength in womans legs">
+                        <img loading="lazy" src="./Images/Bone-health.webp" alt="Bone Strength in womans legs">
                     </div>
                     <div>
                         <h3>Healthier Pregnancies</h3>
-                        <img loading="lazy" src="./Images/pexels-viktoria-matrosova-11685546.jpg" alt="Pregnant woman">
+                        <img loading="lazy" src="./Images/pexels-viktoria-matrosova-11685546.webp" alt="Pregnant woman">
                     </div>
                     <div>
                         <h3>Digestive Support</h3>
-                        <img loading="lazy" src="./Images/digestive-support.png" alt="Digestive health support">
+                        <img loading="lazy" src="./Images/digestive-support.webp" alt="Digestive health support">
                     </div>
                 </div>
             </section>
@@ -142,7 +142,7 @@
         <section class="text-center" id="Find-Your-Recipe-Section">
             <h2>Find Your Recipe</h2>
             <hr class="mt-3">
-            <img src="./Images/healthy-heart.jpg" alt="Eat healthy Live healthy">
+            <img src="./Images/healthy-heart.webp" alt="Eat healthy Live healthy">
             <div>
                 <a href="./HTML/Search_Recipe.html">Find Your Recipe</a>
             </div>
