--- a/HTML/Recipe.html
+++ b/HTML/Recipe.html
@@ -26,7 +26,7 @@
 
     <!-- Start of Navigation -->
     <nav class="d-flex p-1 justify-content-around border-bottom border-4 border-dark align-items-center">
-        <img class="nav-icon" src="../Images/nutritionix.png" alt="Navigation Icon">
+        <img class="nav-icon" src="../Images/nutritionix.webp" alt="Navigation Icon">
         <a class="text-decoration-none" href="../index.html">Home</a>
         <a class="text-decoration-none" href="../HTML/Search_Recipe.html">Recipes</a>
         <a class="text-decoration-none" href="../HTML/contact.html">Contact</a>
