--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-lg p-3">
     <div class="container-fluid">
       <a class="navbar-brand nav-icon">
-        <img class="nav-icon" src="../Images/nutritionix.png">
+        <img class="nav-icon" src="../Images/nutritionix.webp">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
